--- a/index.html
+++ b/index.html
@@ -8,25 +8,33 @@
     </head>
     <body>
         <header class="navigation">
-            <div class="logo">
-            <img src="images/Logo.png"/>
+            <div class="Logo">
+                <div class="MyLogoimage">
+                    <img src="images/Logo.png"/>
+
+                </div>
+                <h1>
+                    Laila Walsh
+                </h1>
+                <h3>
+                    UX UI Designer
+                </h3>
             <nav class="inline-block">
                 <ul>
-                    <li> PORTFOLIO
-                    </li>
-                    <li> ABOUT ME
-                    </li>
-                    <li> RESUME
-                    </li>
-                    <li> CONTACT
-                    </li>
+                    <li> PORTFOLIO </li>
+                    <li> ABOUT ME</li>
+                    <li> RESUME </li>
+                    <li> CONTACT</li>
                 </ul>
             </nav>
             </div>  
         </header>
         <section class="heroImg">
         <div class="content">
-            <img src="images/Photo.png"/>
+            <div class="MyPhoto">
+                <img src="images/Photo.png"/>
+            </div>
+          
             <h2>
                 Hello, I am Laila Walsh
             </h2>
@@ -40,18 +48,8 @@ I am a freelance UX/UI designer based in Atlanta Georgia. Currently, my passion 
         </section>
         <footer>
             <ul>
-                <li class="inline-block">
-                    PORTFOLIO
-                </li>
-                <li class="inline-block">
-                    ABOUT ME
-                </li>
-                <li class="inline-block">
-                    RESUME
-                </li>
-                <li class="inline-block">
-                    CONTACT
-                </li>
+                <li>lailawalshux@gmail.com</li>
+                <li>+1 678 833 6221</li>
             </ul>
         </footer>
     </body>
